Fixed checkstyle errors
git-svn-id: http://svn.apache.org/repos/asf/jakarta/cactus/trunk@237344 13f79535-47bb-0310-9956-ffa450edef68